--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -21,11 +21,11 @@
           <svg class="products__icon">
             <use
               class="products__svg"
-              href="../images/svg/symbol-defs.svg#icon-Arrow"
+              href="./images/svg/symbol-defs.svg#icon-Arrow"
             ></use>
             <use
               class="products__svg"
-              href="../images/svg/symbol-defs.svg#fat-arrow"
+              href="./images/svg/symbol-defs.svg#fat-arrow"
             ></use>
           </svg>
         </button>
@@ -38,7 +38,7 @@
           Fragrant invigorating drink created from 100% natural ingredients
           without the use of preservatives and flavor enhancers
         </p>
-        
+
         <!-- Кнопка виклику модалки для другого продукту -->
         <button
           class="product__btn product__btn--coffee js-open-modal"
@@ -48,11 +48,11 @@
           <svg class="products__icon">
             <use
               class="products__svg"
-              href="../images/svg/symbol-defs.svg#icon-Arrow"
+              href="./images/svg/symbol-defs.svg#icon-Arrow"
             ></use>
             <use
               class="products__svg"
-              href="../images/svg/symbol-defs.svg#fat-arrow"
+              href="./images/svg/symbol-defs.svg#fat-arrow"
             ></use>
           </svg>
         </button>
@@ -75,11 +75,11 @@
           <svg class="products__icon">
             <use
               class="products__svg"
-              href="../images/svg/symbol-defs.svg#icon-Arrow"
+              href="./images/svg/symbol-defs.svg#icon-Arrow"
             ></use>
             <use
               class="products__svg"
-              href="../images/svg/symbol-defs.svg#fat-arrow"
+              href="./images/svg/symbol-defs.svg#fat-arrow"
             ></use>
           </svg>
         </button>
