Update adress link

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -9,7 +9,9 @@
         <ul class="category__list list">
           <li class="category__item">
             <p class="adress__title">Chicago</p>
-            <a class="adress__link link" href="">10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a>
+            <a class="adress__link link" href="https://goo.gl/maps/tmbvL5t9hcsbGNjA7" target="_blank"
+              rel="noreferrer, noopener">10340 Ridgeland Ave, Chicago
+              Ridge, IL 60415, USA</a>
           </li>
           <li class="category__item">
             <ul class="week__list list">
@@ -45,7 +47,9 @@
         <ul class="category__list list">
           <li class="category__item">
             <p class="adress__title">Los Angeles</p>
-            <a class="adress__link link" href="">1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a>
+            <a class="adress__link link" href="https://goo.gl/maps/bmUvpt7vANMGbiNu7" target="_blank"
+              rel="noreferrer, noopener">1003 Manhattan Ave,
+              Manhattan Beach, CA 90263, USA</a>
           </li>
           <li class="category__item">
             <ul class="week__list list">
@@ -81,7 +85,9 @@
         <ul class="category__list list">
           <li class="category__item">
             <p class="adress__title">New York</p>
-            <a class="adress__link link" href="">726 Sterling Pl, Brooklyn, NY 11222, USA</a>
+            <a class="adress__link link" href="https://goo.gl/maps/wUkAEZUEa4P9VVAH8" target="_blank"
+              rel="noreferrer, noopener">726 Sterling Pl, Brooklyn, NY
+              11222, USA</a>
           </li>
           <li class="category__item">
             <ul class="week__list list">
