--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,5 +1,5 @@
  <!-- Mobile menu Виниченко Елена -->
- <div class="menu-container js-menu-container is-open" id="mobile-menu">
+ <div class="menu-container js-menu-container" id="mobile-menu">
     <a class="header__logo" href arial label>
         <img 
         class="logo__img"
@@ -44,5 +44,6 @@
         </svg>
     </button>
 </div>
+
 
     
