Виправляє css/html
Виправляє помилку для зображення №3 для ретіни в слайдері
Виправляє проблему курсора, видаляє всі властивості з усіх файлів і додає це для body

--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -1,10 +1,14 @@
 body {
-  cursor: url(../images/cursor.png), default;
+  cursor: url(../images/cursor.png) 15 15, default;
   margin: 0 auto;
   font-family: Montserrat, sans-serif;
   font-size: 12px;
   letter-spacing: 0.04em;
   color: var(--brand-black);
+
+  & *:hover{
+    cursor: url(../images/cursor.png) 15 15, default;
+  }
 
   @media (min-width: 480px) {
     max-width: 1600px;
