6 mobile window final

--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,6 +1,6 @@
  <!-- Mobile menu Виниченко Елена -->
- <div class="menu-container js-menu-container" id="mobile-menu">
-    <a class="header__logo" href arial label>
+ <div class="menu__container js-menu-container" id="mobile-menu">
+    <a class="header__logo logo__mobile" href arial label>
         <img 
         class="logo__img"
         srcset="
@@ -15,29 +15,29 @@
         src="./images/logo/s1x_logo.png"
         loading="lazy"/>
     </a>
-    <button class="menu__toggle js-close-menu">
+    <button class="menu__toggle js-close-menu close__menu">
       <svg class="menu-close-icon" width="32" height="32">
         <use href="./images/svg/symbol-defs.svg#close-menu"></use>
       </svg>
     </button>
-    <ul class="mobile-menu list">
-      <li class="mobile-menu-item">
-        <a href="" class="mobile-menu-link link mobile-menu--current"
+    <ul class="mobile__menu list">
+      <li class="mobile__item">
+        <a href="" class="mobile__link link"
           >Home</a
         >
       </li>
-      <li class="mobile-menu-item">
-        <a href="" class="mobile-menu-link link
+      <li class="mobile__item">
+        <a href="" class="mobile__link link
         ">How it’s made?</a>
       </li>
-      <li class="mobile-menu-item">
-        <a href="" class="mobile-menu-link link">Our products</a>
+      <li class="mobile__item">
+        <a href="" class="mobile__link link">Our products</a>
       </li>
-      <li class="mobile-menu-item">
-        <a href="" class="mobile-menu-link link">Contact</a>
+      <li class="mobile__item">
+        <a href="" class="mobile__link link">Contact</a>
       </li>
     </ul>
-    <button class="btn__buy-now menu-btn">
+    <button class="btn__buy-now menu__btn">
         <p class="btn__content">Buy now</p>
         <svg class="svg-icon" width="12" height="12">
           <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
