--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -1,17 +1,13 @@
+.logo__mobile {
+    margin-right: auto;
+}
+
 .menu__toggle {
-    min-height: 32px;
-    min-width: 32px;
-    display: flex;
     margin-left: auto;
     background-color: rgba(0,0,0,0);
     border: none;
     fill: var(--brand-menu);
     outline: none;
-    
-    position: absolute;
-    top: 16px;
-    right: 16px;
-    color: var(--brand-white);
 
         @media screen and (min-width: 768px) {
             margin-right: 32px;
@@ -27,52 +23,88 @@
         }
 }
     
-.menu-container {
-    display: block;
+.menu__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
-    padding: 12px 20px 12px 32px;
+    padding: 20px 32px 32px 20px;
     background-color: var(--brand-green);
     z-index: 999;
   
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
+
+    @media screen and (min-width: 768px) {
+        padding: 12px 20px 12px 32px;
+    }
   }
-  
-.menu-container.is-open {
+
+.menu__container.is-open {
     transform: translateX(0);
 }
 
-.mobile-menu {
+.close__menu {
+    min-height: 32px;
+    min-width: 32px;
+    position: absolute;
+    top: 16px;
+    right: 16px;
+
+    &:hover,
+    &:focus {
+        fill: var(--brand-yellow);
+    }
+
+    @media screen and (min-width: 768px) {
+        top: 32px;
+    }
+}
+
+.mobile__menu {
     padding: 0;
     padding-top: 51px;
     margin: 0;
-    margin-bottom: 110px;
+    margin-bottom: auto;
     display: flex;
     gap: 32px;
     flex-direction: column;
     text-align: center;
-  }
-  
-.mobile-menu .link {
-    color: var(--brand-white);
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 1.22;
 
-    &:hover,
-    &:focus {
-        color: var(--brand-black);
+    @media screen and (min-width: 768px) {
+        gap: 40px;
+        padding-top: 76px;
     }
 }
 
-.menu-btn {
+.mobile__link {
+    color: var(--brand-white);
+            font-weight: 700;
+            font-size: 32px;
+            line-height: 1.22;
+        
+            &:hover,
+            &:focus {
+                color: var(--brand-black);
+            }
+        
+            @media screen and (min-width: 768px) {
+                font-size: 48px;
+            }
+}
+
+.menu__btn {
     display: flex;
-    position: absolute;
+    margin-bottom: 64px;
     font-weight: 600;
     font-size: 14px;
     line-height: 17px;
+
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
 }
