--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -194,6 +194,7 @@
   letter-spacing: 0.04em;
 
   color: #d6936d;
+  cursor: url(../images/cursor.png), pointer;
 
   @media screen and (min-width: 768px) {
     font-size: 14px;
