--- a/src/partials/franchise.html
+++ b/src/partials/franchise.html
@@ -1,7 +1,7 @@
-<div class="backdrop is-hidden" data-modal="4">
+<div class="backdrop is-hidden" data-modal>
   <div class="modal-franchise">
     <button data-modal-close class="button-close">
-      <svg class="icon-button js-modal-close" width="24" height="24">
+      <svg class="icon-button" width="24" height="24">
         <use href="./images/icons.svg#icon-clarity_close-line"></use>
       </svg>
     </button>
