overlay franchise fixed

--- a/src/partials/button.html
+++ b/src/partials/button.html
@@ -15,7 +15,7 @@
     <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
   </svg>
 </button>
-<button class="btn__franchise">
+<button class="btn__franchise js-open-modal" data-modal="4">
   <p class="btn__content">Franchise</p>
   <svg class="svg-icon" width="12" height="12">
     <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
