--- a/src/sass/_franchise.scss
+++ b/src/sass/_franchise.scss
@@ -1,40 +1,59 @@
-.backdrop {
+// .backdrop {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   z-index: 100;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0, 0, 0, 0.2);
+// }
+
+// .backdrop.is-hidden {
+//   opacity: 0;
+//   pointer-events: none;
+//   visibility: hidden;
+// }
+
+// .backdrop.is-hidden
+
+.overlay {
+  /* Скрываем подложку  */
+  opacity: 0;
+  visibility: hidden;
+
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: 0.3s all;
+  @media screen and (max-height: 991px) {
+    overflow: scroll;
+  }
 }
-
-.backdrop.is-hidden {
+.modal {
   opacity: 0;
-  pointer-events: none;
   visibility: hidden;
 }
-
-.backdrop.is-hidden .modal-franchise {
-  opacity: 0;
-  transform: translate(-50%, -50%) scale(1.1);
-}
-
 .modal-franchise {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  width: 280px;
-  height: 674px;
+  // width: 280px;
+  // height: 674px;
   padding: 28px;
   background-color: #fcfcfc;
   border: 2px solid #f8d24e;
   border-radius: 10px;
+  z-index: 999; /* Должен быть выше чем у подложки*/
 
   @media screen and (min-width: 768px) {
     width: 568px;
-    height: 668px;
+    // height: 668px;
     padding-top: 32px;
     padding-right: 60px;
     padding-bottom: 32px;
@@ -42,7 +61,13 @@
   }
 }
 
-.button-close {
+.modal.active,
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal__close {
   position: absolute;
   top: 12px;
   right: 12px;
