--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,7 +36,7 @@
             </ul>
         </nav>
         <button
-          class="menu-toggle js-open-menu"
+          class="menu__toggle js-open-menu"
           aria-expanded="false"
           aria-controls="mobile-menu"
         >
