--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,6 +1,6 @@
 <!-- Products Уточкіна Катерина -->
-<section class="products">
-  <div class="products__container container">
+<section class="products" id="products">
+  <div class="products__container">
     <p class="products__lable">100% natural</p>
     <h2 class="products__title">Products</h2>
     <ul class="products__list">
