--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,33 +1,5 @@
 .products {
   background-color: white;
-
-  background-image: url(../images/body_bg/mobile1x.png);
-
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    background-image: url(../images/body_bg/mobile2x.png);
-  }
-
-  @media (min-width: 769px) {
-    background-image: url(../images/body_bg/tablet1x.png);
-
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url(../images/body_bg/tablet2x.png);
-    }
-  }
-
-  @media (min-width: 1200px) {
-    background-image: url(../images/body_bg/desktop1x.png);
-
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url(../images/body_bg/desktop2x.png);
-    }
-  }
 }
 
 .products__container {
@@ -61,49 +33,42 @@
   font-family: 'Seymour One';
   font-weight: 400;
   font-size: 30px;
-  line-height: 1.27;
+  line-height: 1.25;
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-
+  margin-bottom: 148px;
   color: var(--brand-black);
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 40px;
 
   @media screen and (min-width: 768px) {
-    font-size: 34px;
-    line-height: 1.26;
-    margin-bottom: 80px;
+    margin-bottom: 160px;
   }
 
   @media screen and (min-width: 1200px) {
-    font-size: 36px;
-    line-height: 1.25;
-    margin-bottom: 120px;
-    letter-spacing: 0.06em;
+    margin-bottom: 175px;
   }
 }
 
 .products__name {
   font-family: 'Montserrat';
+  margin-top: -50px;
+  margin-bottom: 40px;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.22;
   text-align: center;
   text-transform: uppercase;
   color: var(--brand-black);
-  margin-bottom: 40px;
   letter-spacing: 0.04em;
 
   @media screen and (min-width: 768px) {
-    font-size: 22px;
+    margin-bottom: 20px;
   }
 
   @media screen and (min-width: 1200px) {
     font-size: 30px;
     line-height: 1.23;
-    margin-bottom: 66px;
+    margin-top: -40px;
   }
 }
 
@@ -223,12 +188,10 @@
     margin-bottom: -30px;
   }
 
-  background: linear-gradient(
-      0deg,
-      rgba(156, 190, 143, 0.7),
-      rgba(156, 190, 143, 0.7)
-    ),
-    #d9d9d9;
+  background: linear-gradient(0deg,
+    rgba(156, 190, 143, 0.7),
+    rgba(156, 190, 143, 0.7)),
+  #d9d9d9;
   box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
   border-radius: 100.166px;
 
@@ -274,12 +237,10 @@
     margin-bottom: -30px;
   }
 
-  background: linear-gradient(
-      0deg,
-      rgba(248, 210, 78, 0.7),
-      rgba(248, 210, 78, 0.7)
-    ),
-    #d9d9d9;
+  background: linear-gradient(0deg,
+    rgba(248, 210, 78, 0.7),
+    rgba(248, 210, 78, 0.7)),
+  #d9d9d9;
   box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
   border-radius: 100.166px;
 
@@ -326,12 +287,10 @@
     margin-bottom: -30px;
   }
 
-  background: linear-gradient(
-      0deg,
-      rgba(213, 117, 63, 0.7),
-      rgba(213, 117, 63, 0.7)
-    ),
-    #d9d9d9;
+  background: linear-gradient(0deg,
+    rgba(213, 117, 63, 0.7),
+    rgba(213, 117, 63, 0.7)),
+  #d9d9d9;
   box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
   border-radius: 100.166px;
 
@@ -389,13 +348,13 @@
 }
 
 .product__btn--cream {
-  background-color: var(--brand-green);
+  background-color: var(--brand-products-1);
 }
 
 .product__btn--coffee {
-  background-color: var(--brand-products-yellow);
+  background-color: var(--brand-products-2);
 }
 
 .product__btn--milkshakes {
-  background-color: var(--brand-brown);
+  background-color: var(--brand-products-3);
 }
