--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -23,7 +23,7 @@
                       ./images/hero/many-ice-cream-desctop.png   225w,
                       ./images/hero/many-ice-cream-desctop2x.png 550w
                     " sizes="(min-width: 1200px) 225px, (min-width: 768px) 152px, 100vw"
-                src="../images/hero/many-ice-cream-tablet.png" alt="Many ice-cream on a plate" loading="lazy" />
+                src="./images/hero/many-ice-cream-tablet.png" alt="Many ice-cream on a plate" loading="lazy" />
             </div>
           </li>
           <li>
@@ -46,7 +46,7 @@
                   ./images/hero/ice-cream-tablet2x.png  534w,
                   ./images/hero/ice-cream-desktop2x.png 912w
                 " sizes="(min-width: 480px) 177px, (min-width: 768px) 268px, (min-width: 1200px) 456px,  100vw"
-          src=".images/hero/ice-cream-mobile" alt="ice-creame cones" loading="lazy" />
+          src="./images/hero/ice-cream-mobile.png" alt="ice-creame cones" loading="lazy" />
       </div>
       <div class="ownership">
         <ul class="ownership__list list">
