--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,8 +12,7 @@
 @import './customer-reviews';
 @import './header';
 @import './mobile-menu';
-
-
+@import './hero';
 
 @import './button';
 @import './advantages';
