--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,7 +1,3 @@
-.products {
-  background-color: white;
-}
-
 .products__container {
   padding: 0 20px;
   margin: 0 auto;
@@ -84,6 +80,7 @@
   letter-spacing: 0.04em;
   padding-left: 40px;
   padding-right: 40px;
+  margin-bottom: 73px;
 
   @media screen and (min-width: 1200px) {
     font-size: 16px;
@@ -129,7 +126,9 @@
 }
 
 .products__list {
+  padding-left: 0; //       ИЗМЕНЕНО ПАШЕЙ
   padding-bottom: 60px;
+  list-style: none; //       ИЗМЕНЕНО ПАШЕЙ
 
   @media screen and(min-width: 768px) {
     display: flex;
@@ -182,16 +181,18 @@
   height: 200px;
   margin-left: auto;
   margin-right: auto;
-  top: -70px;
+  top: -100px;
 
   @media screen and(min-width: 768px) {
     margin-bottom: -30px;
   }
 
-  background: linear-gradient(0deg,
-    rgba(156, 190, 143, 0.7),
-    rgba(156, 190, 143, 0.7)),
-  #d9d9d9;
+  background: linear-gradient(
+      0deg,
+      rgba(156, 190, 143, 0.7),
+      rgba(156, 190, 143, 0.7)
+    ),
+    #d9d9d9;
   box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
   border-radius: 100.166px;
 
@@ -204,7 +205,7 @@
     background-image: url(../images/products/products-1-min.png);
     background-size: cover;
     position: absolute;
-    bottom: 21px;
+    bottom: 12px;
   }
 }
 
@@ -231,16 +232,18 @@
   height: 200px;
   margin-left: auto;
   margin-right: auto;
-  top: -70px;
+  top: -100px;
 
   @media screen and(min-width: 768px) {
     margin-bottom: -30px;
   }
 
-  background: linear-gradient(0deg,
-    rgba(248, 210, 78, 0.7),
-    rgba(248, 210, 78, 0.7)),
-  #d9d9d9;
+  background: linear-gradient(
+      0deg,
+      rgba(248, 210, 78, 0.7),
+      rgba(248, 210, 78, 0.7)
+    ),
+    #d9d9d9;
   box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
   border-radius: 100.166px;
 
@@ -253,7 +256,7 @@
     background-image: url(../images/products/products-2-min.png);
     background-size: cover;
     position: absolute;
-    bottom: 21px;
+    bottom: 12px;
   }
 }
 
@@ -281,16 +284,18 @@
   height: 200px;
   margin-left: auto;
   margin-right: auto;
-  top: -70px;
+  top: -100px;
 
   @media screen and(min-width: 768px) {
     margin-bottom: -30px;
   }
 
-  background: linear-gradient(0deg,
-    rgba(213, 117, 63, 0.7),
-    rgba(213, 117, 63, 0.7)),
-  #d9d9d9;
+  background: linear-gradient(
+      0deg,
+      rgba(213, 117, 63, 0.7),
+      rgba(213, 117, 63, 0.7)
+    ),
+    #d9d9d9;
   box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
   border-radius: 100.166px;
 
@@ -303,10 +308,19 @@
     background-image: url(../images/products/products-3-min.png);
     background-size: cover;
     position: absolute;
-    bottom: 21px;
+    bottom: 12px;
   }
 }
 
+.products__item-align {
+  margin-top: 0px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  @media screen and (min-width: 768px) {
+    margin-top: 0px;
+  }
+}
 .products__milkshakes {
   padding-bottom: 60px;
 }
@@ -349,12 +363,15 @@
 
 .product__btn--cream {
   background-color: var(--brand-products-1);
+  border: none;
 }
 
 .product__btn--coffee {
   background-color: var(--brand-products-2);
+  border: none;
 }
 
 .product__btn--milkshakes {
   background-color: var(--brand-products-3);
+  border: none;
 }
