--- a/src/partials/button.html
+++ b/src/partials/button.html
@@ -9,7 +9,7 @@
   </svg>
 </button>
 
-<button class="btn__our-locations">
+<button class="btn__our-locations js-open-modal" data-modal="5">
   <p class="btn__content">Our Locations</p>
   <svg class="svg-icon" width="12" height="12">
     <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
