--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -38,6 +38,7 @@
   background-color: #fcfcfc;
   border: 2px solid #f8d24e;
   border-radius: 10px;
+  z-index: 999;
 
   @media screen and (min-width: 768px) {
     width: 568px;
