--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,5 +1,6 @@
 <section class="customer-reviews">
   <div class="container">
+    <h2 class="customer__title visually-hidden">Customer reviews</h2>
     <div class="swiper">
       <ul class="swiper-wrapper list">
         <li class="swiper-slide">
@@ -52,28 +53,8 @@
           </div>
           <h2 class="swiper__title">Diana, Chicago</h2>
         </li>
-        <!-- <li class="swiper-slide">
-          <img
-            class="swiper__image"
-            src="./images/customer-reviews/review3@1x.jpg"
-            srcset="./images/customer-reviews/review3@2x.jpg 2x"
-          />
-          <div class="swiper__text">
-            Ice cream is my passion! I love your chocolate hazelnut ice cream!
-            And I really like the excellent service - always served politely and
-            quickly!
-          </div>
-          <h2 class="swiper__title">Diana, Chicago</h2>
-        </li> -->
       </ul>
       <div class="bullets-container"><div class="swiper-pagination"></div></div>
-
-      <!-- <div class="swiper-button-next"></div> -->
-      <!-- <div class="swiper__nav">
-        <div class="swiper__bullet"></div>
-        <div class="swiper__bullet"></div>
-        <div class="swiper__bullet"></div>
-      </div> -->
     </div>
   </div>
 </section>
