position not absolute

--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -2840,7 +2840,7 @@ a {
 }
 
 .modal-franchise {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
