--- a/src/sass/_franchise.scss
+++ b/src/sass/_franchise.scss
@@ -38,7 +38,7 @@
   visibility: hidden;
 }
 .modal-franchise {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
